--- a/source/assets/css/homepage/_contact.css.scss
+++ b/source/assets/css/homepage/_contact.css.scss
@@ -36,6 +36,7 @@
     @include retina-image('contact/close-btn', 40px 40px, $asset-pipeline: true);
     @include position(fixed, 30px 30px null null);
     @include size(em(40));
+    background-size: cover;
     display: block;
 
     &:hover {
